fix news
